# bazel_buildlib

./: .gitattributes  .prettierignore  BUILD.bazel  README.md  WORKSPACE  format  new-repo.sh  renovate.json5
buildlib/: .bazelignore  .bazelrc  .eslintignore  .eslintrc.js  .gitignore  .npmrc  BUILD.bazel  WORKSPACE  defs.bzl  package.json  pnpm-lock.yaml  tsconfig-base.json
buildlib/docs/: BUILD.bazel  README.md  docker.bzl  docker.md  gql.bzl  gql.md  hacks.bzl  hacks.md  prisma.bzl  prisma.md  react_app.bzl  react_app.md  tar.bzl  tar.md  tooling.bzl  tooling.md  ts.bzl  ts.md  ts_setup.bzl  ts_setup.md
buildlib/my-version/: BUILD.bazel  private.bzl
buildlib/prisma/linux/: BUILD.bazel
buildlib/prisma/openssl/: BUILD.bazel
buildlib/private/: BUILD.bazel  README.md  package.json  pnpm-lock.yaml
buildlib/private/bazelrc/: BUILD.bazel  bazelrc.bzl  default.bazelrc
buildlib/private/docker/: BUILD.bazel  compose.bzl  dc_service_reference.bzl  dh_docker_images_push.bzl  empty_dir_layer.bzl  ibazel_info.bzl  image_for_ts_test.bzl  js_image_layers.bzl  load-image-for-ts-test.d.ts  load-image-for-ts-test.tpl.js  load-service-ref.tpl.sh  node_binary_image.bzl  oci_util.bzl  providers.bzl  public-contrib-bzl.patch  pull_info.bzl  stamping.bzl
buildlib/private/docker/src/: BUILD.bazel  ImageInfos.ts  LayerBuilder.ts  OCIImage.ts  dc-processor.ts  dc-runner.ts  empty-dir-layer.ts  js-image-layer.ts  load-stamp-data.ts  load-workspace-status.ts  loadImageToDocker.ts  oci-pusher.ts  spawnInheritIO.ts  syncFiles.ts  tsconfig.json
buildlib/private/docker/test/: BUILD.bazel  loadImageForTsTest.test.ts  syncFiles.test.ts
buildlib/private/gql/: BUILD.bazel  client_codegen.bzl  schema.bzl
buildlib/private/gql/src/: BUILD.bazel  gen-schema.ts  tsconfig.json
buildlib/private/hacks/: BUILD.bazel  transpile_esm_to_cjs.bzl
buildlib/private/hacks/src/: BUILD.bazel  babel-plugins.d.ts  transpile-esm-to-cjs.ts
buildlib/private/js-lib/src/: BUILD.bazel  parseWorkspaceStatus.ts
buildlib/private/js-lib/test/: BUILD.bazel  parseWorkspaceStatus.test.ts  tsconfig.json
buildlib/private/my-version/src/: BUILD.bazel  gen-my-version.ts
buildlib/private/prisma/: BUILD.bazel  cli.bzl  cli_image.bzl  constants.bzl  dev-run.tpl.sh  dev.bzl  engines_store.BUILD.tpl  generate.bzl  lib.bzl  local_config_platform.BUILD.bazel  local_config_platform.bzl  node_modules_bin_path.bzl  prisma_repo.BUILD  providers.bzl  repositories.bzl  schema.bzl  store.bzl
buildlib/private/prisma/configs/: BUILD.bazel
buildlib/private/prisma/test/: BUILD.bazel  parse_distro_tests.bzl  parse_libssl_version_tests.bzl
buildlib/private/react_app/: BUILD.bazel  bundle.bzl  esm_transition.bzl  hot_reload_base.bzl  react_app.bzl  vite.config.js
buildlib/private/renovate/: BUILD.bazel  renovate.bzl
buildlib/private/renovate/src/: BUILD.bazel  check-renovate-config.ts
buildlib/private/tar/: BUILD.bazel  tar.bzl
buildlib/private/tar/src/: BUILD.bazel  mtree-replace-prefix.ts
buildlib/private/tar/test/: BUILD.bazel  file.txt
buildlib/private/tests/prisma/: BUILD.bazel  lib_tests.bzl
buildlib/private/ts/: BUILD.bazel  config.bzl  eslint.bzl  eslint.dh-defaults.js  eslintrc.bzl  js_binary.bzl  library.bzl  npm_js_binary.bzl  pnpm_lock_test.bzl  providers.bzl  setup.bzl  swcrc.bzl  test-pnpm-lock.sh  test.bzl
buildlib/private/ts/src/: BUILD.bazel  FileTransform.ts  check-eslintrc.ts  run-eslint.ts
buildlib/repositories/: BUILD.bazel  README.md  docker_containers.bzl  setup0.bzl  setup1.bzl  setup2.bzl
buildlib/test/jest-module-mock/: BUILD.bazel  code.better.test.ts  code.better.ts  code.test.ts  code.ts  moduleToMock.ts
buildlib/test/mock-unbound/: BUILD.bazel  mock-unbound.test.ts
buildlib/test/src-data-in-image/: BUILD.bazel  code.ts
examples/: .eslintrc.js  .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json  pnpm-lock.yaml
examples/api/: BUILD.bazel  README.md
examples/api/src/: BUILD.bazel  BlobStore.ts  Context.ts  index.ts  schema.ts  tsconfig.json
examples/api/src/resolvers/: Attachment.ts
examples/api/test/: BUILD.bazel  BlobStore.test.ts  tsconfig.json
examples/api/test/resolvers/: Attachment.test.ts
examples/dc/: BUILD.bazel  docker-compose.yml
examples/frontend/: BUILD.bazel  README.md  index.html
examples/frontend/public/: BUILD.bazel
examples/frontend/src/: App.css  App.tsx  BUILD.bazel  TodoLists.tsx  index.tsx  queries.ts  tsconfig.json
examples/frontend/src/components/: TodoItem.tsx  TodoList.tsx
examples/frontend/test/: App.test.tsx  BUILD.bazel  TodoLists.test.tsx  tsconfig.json
examples/prisma/: BUILD.bazel  README.md  schema.prisma
examples/prisma/migrations/: BUILD.bazel
examples/prisma/rls/: BUILD.bazel  index.ts
examples/prisma/seed/: BUILD.bazel  index.ts  tsconfig.json
examples/prisma/test/: BUILD.bazel  rls.test.ts  tsconfig.json
examples/proxy/: BUILD.bazel  default.conf
examples/rest-api/: BUILD.bazel  README.md  tsoa.json
examples/rest-api/src/: BUILD.bazel  ServerContext.ts  app.ts  index.ts  tsconfig.json  tsoa-ioc.ts
examples/rest-api/test/: BUILD.bazel  app.test.ts
examples/scripts/: git_workspace_status.sh
examples/shared-fe-lib/src/: BUILD.bazel  Footer.css  Footer.tsx  Greeter.css  Greeter.tsx  tsconfig.json
examples/shared-fe-lib/test/: BUILD.bazel  Footer.test.tsx  Greeter.test.tsx
examples/shared-lib/src/: BUILD.bazel  index.ts  tsconfig.json
examples/shared-lib/test/: BUILD.bazel  data-file.txt  index.test.ts  tsconfig.json
new-repo/templates/: .drone.yml  BUILD.bazel  WORKSPACE
tests/ide/prisma/: BUILD.bazel  schema.prisma
tests/no-prisma/: .gitignore  BUILD.bazel  WORKSPACE  package.json  pnpm-lock.yaml
tests/no-prisma/src/: BUILD.bazel  index.ts
tests/no-typegraphql/: .eslintrc.js  BUILD.bazel  WORKSPACE  package.json  pnpm-lock.yaml
tests/no-typegraphql/prisma/: schema.prisma
tests/no-typegraphql/src/: BUILD.bazel  index.ts
tests/prisma-musl-no-typegraphql/: BUILD.bazel  WORKSPACE  package.json  pnpm-lock.yaml
tests/prisma-musl-no-typegraphql/src/: index.ts
(+19 files in other folders)
