load("@dh_buildlib_private_npm//:defs.bzl", "npm_link_all_packages")
load("@dh_buildlib_private_npm//private:prettier/package_json.bzl", _prettier = "bin")
load("//:defs.bzl", "pnpm_lock_test")

npm_link_all_packages(name = "node_modules")

pnpm_lock_test(
    name = "pnpm_lock_test",
)

_prettier.prettier_binary(
    name = "prettier",
    visibility = ["//visibility:public"],
)
