load("@dh_buildlib//:defs.bzl", "gql_schema", "node_binary_image")

node_binary_image(
    name = "api",
    base = "@node_image//image",
    data = ["//api/src"],
    entry_point = "//api/src:index.js",
    ports = ["4000"],
    visibility = [
        "//:docker-image-users",
    ],
    volumes = ["/blob_store"],
)

gql_schema(
    name = "schema",
    out = "schema.graphql",
    schema_import = "./src/schema",
    visibility = [
        "//frontend:__subpackages__",
    ],
    deps = ["//api/src"],
)
