load("@dh_buildlib//:defs.bzl", "bazelrc", "node_binary_image", "ts_setup")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

bazelrc(name = "bazelrc")

node_binary_image(
    name = "test",
    data = ["//src"],
    entry_point = "//src:index.js",
)

ts_setup(name = "ts_setup")
