load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":stamping.bzl", "load_stamp_data")

exports_files([
    "load-service-ref.tpl.sh",
    "load-image-for-ts-test.d.ts",
    "load-image-for-ts-test.tpl.js",
])

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    visibility = [
        "//docs:__pkg__",
        "//private/prisma:__pkg__",
        "//private/react_app:__pkg__",
    ],
    deps = [
        "//private/prisma:constants",
        "//private/ts:bzl",
        "@aspect_bazel_lib//lib:copy_file",
        "@aspect_rules_js//js:libs",
        "@aspect_rules_js//js:providers",
        "@bazel_skylib//lib:paths",
        "@dh_buildlib_private_ibazel_info//:bzl",
        "@rules_oci//oci:defs",
    ],
)

platform(
    name = "node_default_platform",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
        "//prisma/linux:debian",
        "//prisma/openssl:3",
    ],
    visibility = ["//visibility:public"],
)

load_stamp_data(
    name = "push_stamp_data",
    docker_tag = "push-tag.txt",
    labels = "push-labels.txt",
    visibility = ["//visibility:public"],
)
