load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    visibility = [
        "//docs:__pkg__",
    ],
    deps = [
        "//private/ts:bzl",
        "@aspect_rules_js//js:defs",
        "@aspect_rules_ts//ts:defs",
        "@bazel_skylib//rules:expand_template",
    ],
)
