load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    visibility = [
        "//docs:__pkg__",
    ],
    deps = [
        "@aspect_bazel_lib//lib:paths",
        "@aspect_rules_js//js:libs",
        "@aspect_rules_js//js:providers",
        "@bazel_skylib//lib:paths",
    ],
)
