load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(["vite.config.js"])

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    visibility = [
        "//docs:__pkg__",
    ],
    deps = [
        "//private/docker:bzl",
        "@aspect_bazel_lib//lib:copy_file",
        "@aspect_rules_js//js:defs",
        "@aspect_rules_js//js:libs",
        "@aspect_rules_js//js:providers",
        "@io_bazel_rules_docker//container:providers",
    ],
)
