load("@dh_buildlib//:defs.bzl", "ts_test")

ts_test(
    name = "test",
    deps = [
        "//:node_modules/@types/node",
        "//:node_modules/graphql-upload-cjs",
        "//:node_modules/jest-extended",
        "//:node_modules/jest-mock-extended",
        "//api/src",
        "//prisma/rls",
    ],
)
