load("@dh_buildlib//:defs.bzl", "gql_client_codegen", "ts_default_srcs", "ts_library")

gql_client_codegen(
    name = "gql",
    gql_schema = "//api:schema",
)

ts_library(
    name = "src",
    srcs = ts_default_srcs() + [":gql"],
    assets = glob(["**/*.css"]),
    uses_dom = True,
    visibility = [
        "//frontend:__subpackages__",
    ],
    deps = [
        "//:node_modules/@apollo/client",
        "//:node_modules/@graphql-typed-document-node/core",
        "//:node_modules/@types/react",
        "//:node_modules/@types/react-dom",
        "//:node_modules/graphql",
        "//:node_modules/react",
        "//:node_modules/react-dom",
        "//shared-fe-lib/src",
    ],
)
