load("@dh_buildlib//:defs.bzl", "gql_client_codegen", "ts_default_srcs", "ts_library")

gql_client_codegen(
    name = "gql",
    gql_schema = "//api:schema",
)

ts_library(
    name = "src",
    srcs = ts_default_srcs() + [":gql"],
    uses_dom = True,
    visibility = [
        "//frontend:__subpackages__",
    ],
    deps = [
        "//:node_modules/@apollo/client",
        "//:node_modules/@emotion/react",
        "//:node_modules/@emotion/styled",
        "//:node_modules/@graphql-typed-document-node/core",
        "//:node_modules/@mui/icons-material",
        "//:node_modules/@mui/joy",
        "//:node_modules/@types/apollo-upload-client",
        "//:node_modules/@types/react",
        "//:node_modules/@types/react-dom",
        "//:node_modules/apollo-upload-client",
        "//:node_modules/graphql",
        "//:node_modules/react",
        "//:node_modules/react-dom",
        "//shared-fe-lib/src",
    ],
)
