load("@dh_buildlib//:defs.bzl", "docker_image_for_ts_test", "ts_test")

docker_image_for_ts_test(
    name = "load_postgres_image",
    image = "@postgres_image",
)

ts_test(
    name = "test",
    data = [
        "//prisma:schema",
        "//prisma/migrations",
        "@prisma//:cli",
    ],
    tags = [
        "requires-network",  # access to docker socket
    ],
    deps = [
        ":load_postgres_image",
        "//:node_modules/@testcontainers/postgresql",
        "//:node_modules/@types/node",
        "//prisma:prisma-client",
        "//prisma/rls",
    ],
)
