load("@dh_buildlib//:defs.bzl", "ts_library")

ts_library(
    name = "src",
    assets = glob([
        "**/*.css",
        "**/*.svg",
    ]),
    uses_dom = True,
    visibility = [
        "//frontend:__subpackages__",
        "//shared-fe-lib:__subpackages__",
    ],
    deps = [
        "//:node_modules/@types/react",
        "//:node_modules/react",
        "//shared-lib/src",
    ],
)
